half way through

--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -38,6 +38,12 @@
           </form>
         </div>
     </nav>
+    <div class="alert alert-warning alert-dismissible fade show mb-0" role="alert">
+        <strong>Hello visitor!</strong> I hope you'll find something usefull here.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
     <div class="container-fi1980 ">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -66,16 +72,60 @@
             </a>
           </div>
     </div>
-    <div class="container">
-        <h2>About me</h2>
+    <div class="container my-3 justify-content-center align-items-center">
+        <h2 class="text-center mt-5 my-5">Me at a glance</h2>
+<div class="row">
+    <div class="col-md-4">
+    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img src="https://picsum.photos/500/300" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Simple Offline Dictionary</h5>
+          <p class="card-text">A simple offline dictionary made by using Python can be implemented as a command-line application that allows users to search for words and their definitions. This application can be built using a Python dictionary data structure and a simple text-based user interface. It can also pronounce the words and their definition.</p>
+          <a href="#" class="btn btn-primary">Repo Link</a>
+        </div>
     </div>
-    
-
+</div>  
+<div class="col-md-4">
+<div class="card shadow-lg p-3 mb-5 bg-white rounded " style="width: 18rem;">
+        <img src="https://picsum.photos/501/301" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">AI Assistant</h5>
+          <p class="card-text">An AI (Artificial Intelligence) Assistant made by Python language refers to a software application or a system that uses machine learning algorithms and natural language processing techniques to understand, interpret, and respond to human input. These AI assistants can be designed to perform various tasks, such as answering questions, providing recommendations, or automating routine tasks.
+        </p>
+          <a href="#" class="btn btn-primary">Repo Link</a>
+        </div>
+      </div>
+</div>
+<div class="col-md-4">
+    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
+            <img src="https://picsum.photos/500/301" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Library Management Sys.(MySQL)</h5>
+              <p class="card-text">A library management system (LMS) is a software application that helps libraries manage their resources, including books, periodicals, multimedia, and other materials. It also helps in managing the circulation of these resources, tracking their availability, and keeping records of their usage, made by using R-DBMS</p>
+              <a href="#" class="btn btn-primary">Repo Link</a>
+            </div>
+          </div>
+    </div>
+</div>
+    </div>
+    <hr />
+    <div class="card text-bg-dark mb-3" style="max-width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title text-center">Welcome to My Website!</h5>
+          <p class="card-text">
+            <ul type="circle">
+                <li><b>Email:</b> anuraj.11.04@gmail.com</li>
+                <li><b>Ph no.</b>+91 8090780908</li>
+                <li><b>Instagram</b>@anuraj._.m</li>
+            </ul>
+          </p>
+        </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-this is home page 
+    
+
 </body>
 </html>
