--- a/portfolio/templates/project.html
+++ b/portfolio/templates/project.html
@@ -38,7 +38,76 @@
           </form>
         </div>
       </nav>
-
+      <div class="container my-3 justify-content-center align-items-center">
+        <h2 class="text-center mt-5 my-5">My Projects</h2>
+<div class="row">
+    <div class="col-md-4">
+    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img src="https://picsum.photos/500/300" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Simple Offline Dictionary</h5>
+          <p class="card-text">A simple offline dictionary made by using Python can be implemented as a command-line application that allows users to search for words and their definitions. This application can be built using a Python dictionary data structure and a simple text-based user interface. It can also pronounce the words and their definition.</p>
+          <a href="#" class="btn btn-primary">Repo Link</a>
+        </div>
+    </div>
+</div>  
+<div class="col-md-4">
+<div class="card shadow-lg p-3 mb-5 bg-white rounded " style="width: 18rem;">
+        <img src="https://picsum.photos/501/301" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">AI Assistant</h5>
+          <p class="card-text">An AI (Artificial Intelligence) Assistant made by Python language refers to a software application or a system that uses machine learning algorithms and natural language processing techniques to understand, interpret, and respond to human input. These AI assistants can be designed to perform various tasks, such as answering questions, providing recommendations, or automating routine tasks.
+        </p>
+          <a href="#" class="btn btn-primary">Repo Link</a>
+        </div>
+      </div>
+</div>
+<div class="col-md-4">
+    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
+            <img src="https://picsum.photos/500/301" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Library Management Sys.(MySQL)</h5>
+              <p class="card-text">A library management system (LMS) is a software application that helps libraries manage their resources, including books, periodicals, multimedia, and other materials. It also helps in managing the circulation of these resources, tracking their availability, and keeping records of their usage, made by using R-DBMS</p>
+              <a href="#" class="btn btn-primary">Repo Link</a>
+            </div>
+          </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                <img src="https://picsum.photos/502/301" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Porfolio</h5>
+                  <p class="card-text">A portfolio is a collection of an individual's or a company's work samples, projects, and other relevant information that showcases their skills, experience, and expertise. In this case, we will define a portfolio made using Bootstrap and Django.
+                </p>
+                  <a href="#" class="btn btn-primary">Repo Link</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                    <img src="https://picsum.photos/500/302" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">To-do List</h5>
+                      <p class="card-text">A To-Do list is a simple and effective way to organize and manage tasks. It can be created using just HTML, CSS, and JavaScript.
+                    </p>
+                      <a href="#" class="btn btn-primary">Repo Link</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                        <img src="https://picsum.photos/501/302" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Amazon Home page</h5>
+                          <p class="card-text">As a beginner just making a Amazon global e-web home page for learning experience.
+                        </p>
+                          <a href="#" class="btn btn-primary">Repo Link</a>
+                        </div>
+                      </div>
+                </div>    
+                    
+</div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
