--- a/portfolio/templates/project.html
+++ b/portfolio/templates/project.html
@@ -39,15 +39,15 @@
         </div>
       </nav>
       <div class="container my-3 justify-content-center align-items-center">
-        <h2 class="text-center mt-5 my-5">My Projects</h2>
-<div class="row">
+        <h2 class="text-center mt-5 my-5 text-light">My Projects</h2>
+<div class="row" >
     <div class="col-md-4">
     <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
         <img src="https://picsum.photos/500/300" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Simple Offline Dictionary</h5>
           <p class="card-text">A simple offline dictionary made by using Python can be implemented as a command-line application that allows users to search for words and their definitions. This application can be built using a Python dictionary data structure and a simple text-based user interface. It can also pronounce the words and their definition.</p>
-          <a href="#" class="btn btn-primary">Repo Link</a>
+          <a href="#" class="btn btn-primary">Repo link</a>
         </div>
     </div>
 </div>  
