--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -42,40 +42,40 @@
         <h2>
             Contact me 
         </h2>
-        <form>
-            <div class="form-group">
-              <label for="exampleFormControlInput1">Email address</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <form action="contact_saved" method="POST">
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="name">Name?</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter your name here" name="name">
+          </div>  
+          <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="mail" placeholder="name@example.com" name="mail">
             </div>
             <div class="form-group">
-              <label for="exampleFormControlSelect1">Example select</label>
-              <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
+              <label for="number">Contact Number</label>
+              <input type="text" class="form-control" id="number" placeholder="+91 23435xxxx" name="number">
             </div>
             <div class="form-group">
-              <label for="exampleFormControlSelect2">Example multiple select</label>
-              <select multiple class="form-control" id="exampleFormControlSelect2">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
+              <label for="message">Any message for me?</label>
+              <textarea class="form-control" id="message" rows="3" placeholder="type your message here" name="message"></textarea>
             </div>
-            <div class="form-group">
-              <label for="exampleFormControlTextarea1">Example textarea</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
+            <input type="submit" class="btn btn-outline-success">
           </form>
-          <button type="button" class="btn btn-outline-success">Submit</button>
         </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <hr>
+    <div class="card-body">
+      <h5 class="card-title text-center">Find me here!</h5>
+      <p class="card-text">
+        <ul type="circle">
+            <li><b>Email:</b> anuraj.11.04@gmail.com</li>
+            <li><b>Contact me:</b>+91 8090780908</li>
+            <li><b>Instagram:</b>@anuraj._.m</li>
+        </ul>
+      </p>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
