--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -81,7 +81,7 @@
         <div class="card-body">
           <h5 class="card-title">Simple Offline Dictionary</h5>
           <p class="card-text">A simple offline dictionary made by using Python can be implemented as a command-line application that allows users to search for words and their definitions. This application can be built using a Python dictionary data structure and a simple text-based user interface. It can also pronounce the words and their definition.</p>
-          <a href="#" class="btn btn-primary">Repo Link</a>
+          <a href="https://github.com/Anuraj-IND/Dictionary" class="btn btn-primary">Repo Link</a>
         </div>
     </div>
 </div>  
@@ -92,7 +92,7 @@
           <h5 class="card-title">AI Assistant</h5>
           <p class="card-text">An AI (Artificial Intelligence) Assistant made by Python language refers to a software application or a system that uses machine learning algorithms and natural language processing techniques to understand, interpret, and respond to human input. These AI assistants can be designed to perform various tasks, such as answering questions, providing recommendations, or automating routine tasks.
         </p>
-          <a href="#" class="btn btn-primary">Repo Link</a>
+          <a href="https://github.com/Anuraj-IND/Ai_Assistent" class="btn btn-primary">Repo Link</a>
         </div>
       </div>
 </div>
@@ -102,7 +102,7 @@
             <div class="card-body">
               <h5 class="card-title">Library Management Sys.(MySQL)</h5>
               <p class="card-text">A library management system (LMS) is a software application that helps libraries manage their resources, including books, periodicals, multimedia, and other materials. It also helps in managing the circulation of these resources, tracking their availability, and keeping records of their usage, made by using R-DBMS</p>
-              <a href="#" class="btn btn-primary">Repo Link</a>
+              <a href="https://github.com/Anuraj-IND/Library-Management-System" class="btn btn-primary">Repo Link</a>
             </div>
           </div>
     </div>
@@ -115,8 +115,8 @@
           <p class="card-text">
             <ul type="circle">
                 <li><b>Email:</b> anuraj.11.04@gmail.com</li>
-                <li><b>Ph no.</b>+91 8090780908</li>
-                <li><b>Instagram</b>@anuraj._.m</li>
+                <li><b>Contact me:</b>+91 8090780908</li>
+                <li><b>Instagram:</b>@anuraj._.m</li>
             </ul>
           </p>
         </div>
