--- a/portfolio/templates/project.html
+++ b/portfolio/templates/project.html
@@ -1,117 +1,249 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
     <title>Projects</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Anuraj</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about">About Us</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="project">My Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact">Contact us</a>
-              </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-      <div class="container my-3 justify-content-center align-items-center">
-        <h2 class="text-center mt-5 my-5 text-light">My Projects</h2>
-<div class="row" >
-    <div class="col-md-4">
-    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
-        <img src="https://picsum.photos/500/300" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Simple Offline Dictionary</h5>
-          <p class="card-text">A simple offline dictionary made by using Python can be implemented as a command-line application that allows users to search for words and their definitions. This application can be built using a Python dictionary data structure and a simple text-based user interface. It can also pronounce the words and their definition.</p>
-          <a href="#" class="btn btn-primary">Repo link</a>
-        </div>
-    </div>
-</div>  
-<div class="col-md-4">
-<div class="card shadow-lg p-3 mb-5 bg-white rounded " style="width: 18rem;">
-        <img src="https://picsum.photos/501/301" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">AI Assistant</h5>
-          <p class="card-text">An AI (Artificial Intelligence) Assistant made by Python language refers to a software application or a system that uses machine learning algorithms and natural language processing techniques to understand, interpret, and respond to human input. These AI assistants can be designed to perform various tasks, such as answering questions, providing recommendations, or automating routine tasks.
-        </p>
-          <a href="#" class="btn btn-primary">Repo Link</a>
-        </div>
+      <a class="navbar-brand" href="#">Anuraj</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about">About Us</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="project">My Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact">Contact us</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
       </div>
-</div>
-<div class="col-md-4">
-    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
-            <img src="https://picsum.photos/500/301" class="card-img-top" alt="...">
+    </nav>
+    <div class="container my-3 justify-content-center align-items-center">
+      <h2 class="text-center mt-5 my-5 text-light">My Projects</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div
+            class="card shadow-lg p-3 mb-5 bg-white rounded"
+            style="width: 18rem"
+          >
+            <img
+              src="https://picsum.photos/500/300"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">Library Management Sys.(MySQL)</h5>
-              <p class="card-text">A library management system (LMS) is a software application that helps libraries manage their resources, including books, periodicals, multimedia, and other materials. It also helps in managing the circulation of these resources, tracking their availability, and keeping records of their usage, made by using R-DBMS</p>
-              <a href="#" class="btn btn-primary">Repo Link</a>
+              <h5 class="card-title">Simple Offline Dictionary</h5>
+              <p class="card-text">
+                A simple offline dictionary made by using Python can be
+                implemented as a command-line application that allows users to
+                search for words and their definitions. This application can be
+                built using a Python dictionary data structure and a simple
+                text-based user interface. It can also pronounce the words and
+                their definition.
+              </p>
+              <a
+                href="https://github.com/Anuraj-IND/Dictionary"
+                class="btn btn-primary"
+                >Repo link</a
+              >
             </div>
           </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
-                <img src="https://picsum.photos/502/301" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Porfolio</h5>
-                  <p class="card-text">A portfolio is a collection of an individual's or a company's work samples, projects, and other relevant information that showcases their skills, experience, and expertise. In this case, we will define a portfolio made using Bootstrap and Django.
-                </p>
-                  <a href="#" class="btn btn-primary">Repo Link</a>
-                </div>
-              </div>
         </div>
         <div class="col-md-4">
-            <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
-                    <img src="https://picsum.photos/500/302" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">To-do List</h5>
-                      <p class="card-text">A To-Do list is a simple and effective way to organize and manage tasks. It can be created using just HTML, CSS, and JavaScript.
-                    </p>
-                      <a href="#" class="btn btn-primary">Repo Link</a>
-                    </div>
-                  </div>
+          <div
+            class="card shadow-lg p-3 mb-5 bg-white rounded"
+            style="width: 18rem"
+          >
+            <img
+              src="https://picsum.photos/501/301"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">AI Assistant</h5>
+              <p class="card-text">
+                An AI (Artificial Intelligence) Assistant made by Python
+                language refers to a software application or a system that uses
+                machine learning algorithms and natural language processing
+                techniques to understand, interpret, and respond to human input.
+                These AI assistants can be designed to perform various tasks,
+                such as answering questions, providing recommendations, or
+                automating routine tasks.
+              </p>
+              <a
+                href="https://github.com/Anuraj-IND/Ai_Assistent"
+                class="btn btn-primary"
+                >Repo Link</a
+              >
             </div>
-            <div class="col-md-4">
-                <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
-                        <img src="https://picsum.photos/501/302" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Amazon Home page</h5>
-                          <p class="card-text">As a beginner just making a Amazon global e-web home page for learning experience.
-                        </p>
-                          <a href="#" class="btn btn-primary">Repo Link</a>
-                        </div>
-                      </div>
-                </div>    
-                    
-</div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div
+            class="card shadow-lg p-3 mb-5 bg-white rounded"
+            style="width: 18rem"
+          >
+            <img
+              src="https://picsum.photos/500/301"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Library Management Sys.(MySQL)</h5>
+              <p class="card-text">
+                A library management system (LMS) is a software application that
+                helps libraries manage their resources, including books,
+                periodicals, multimedia, and other materials. It also helps in
+                managing the circulation of these resources, tracking their
+                availability, and keeping records of their usage, made by using
+                R-DBMS
+              </p>
+              <a
+                href="https://github.com/Anuraj-IND/Library-Management-System"
+                class="btn btn-primary"
+                >Repo Link</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div
+            class="card shadow-lg p-3 mb-5 bg-white rounded"
+            style="width: 18rem"
+          >
+            <img
+              src="https://picsum.photos/502/301"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Porfolio</h5>
+              <p class="card-text">
+                A portfolio is a collection of an individual's or a company's
+                work samples, projects, and other relevant information that
+                showcases their skills, experience, and expertise. In this case,
+                we will define a portfolio made using Bootstrap and Django.
+              </p>
+              <a
+                href="https://github.com/Anuraj-IND/portfolio"
+                class="btn btn-primary"
+                >Repo Link</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div
+            class="card shadow-lg p-3 mb-5 bg-white rounded"
+            style="width: 18rem"
+          >
+            <img
+              src="https://picsum.photos/500/302"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">To-do List</h5>
+              <p class="card-text">
+                A To-Do list is a simple and effective way to organize and
+                manage tasks. It can be created using just HTML, CSS, and
+                JavaScript.
+              </p>
+              <a
+                href="https://github.com/Anuraj-IND/ToDoList.github.io"
+                class="btn btn-primary"
+                >Repo Link</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div
+            class="card shadow-lg p-3 mb-5 bg-white rounded"
+            style="width: 18rem"
+          >
+            <img
+              src="https://picsum.photos/501/302"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Amazon Home page</h5>
+              <p class="card-text">
+                As a beginner just making a Amazon global e-web home page for
+                learning experience.
+              </p>
+              <a
+                href="https://github.com/Anuraj-IND/Amazon.github.io"
+                class="btn btn-primary"
+                >Repo Link</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
