--- a/portfolio/templates/project.html
+++ b/portfolio/templates/project.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Anuraj</a>
+      <a class="navbar-brand" href="message">Anuraj</a>
       <button
         class="navbar-toggler"
         type="button"
