--- a/portfolio/templates/messages.html
+++ b/portfolio/templates/messages.html
@@ -29,7 +29,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/"
+            <a class="nav-link" href="home"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
