--- a/portfolio/templates/signin.html
+++ b/portfolio/templates/signin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>login</title>
+    <title>Welcome!</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
@@ -12,34 +12,28 @@
     />
   </head>
   <body>
-    <div
-      class="container d-flex justify-content-center my-5"
-      style="background-image: linear-gradient(purple, violet)"
-    >
-      <div>
-        <h2
-          class="container d-flex justify-content-center my-5"
-          style="color: white"
-        >
-          Welcome! Back ;) {{error}}
-        </h2>
-      </div>
-      <div
-        class="card container d-flex justify-content-center my-5"
-        style="width: 18rem"
-      >
+    <div class="container d-flex justify-content-center my-5" style="background-image: linear-gradient(purple,violet);">
+        <div>
+            <h2 class="container d-flex justify-content-center my-5" style="color: white;">Create New Account ;)</h2>
+        </div>
+    <div class="card container d-flex justify-content-center my-5" style="width: 18rem;">
         <div class="card-body">
-          <div class="container align-center my-3">
-            <h2>Login in</h2>
-            <form action="login" method="POST">
-              {% csrf_token %} {{ufrm}}
-              <input type="submit" class="btn btn-outline-success" />
-            </form>
-          </div>
+          
+            <div class="container align-center my-3">
+              <h2>Sign in</h2>
+              <form action="signin" method="POST">
+                {% csrf_token %} {{ufrm}}
+                <input type="submit" class="btn btn-outline-success"/>
+              </form>
+            </div>
         </div>
       </div>
     </div>
 
+    
+    
+    
+    
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -51,8 +45,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
   </body>
