--- a/portfolio/templates/signin.html
+++ b/portfolio/templates/signin.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container d-flex justify-content-center my-5" style="background-image: linear-gradient(purple,violet);">
         <div>
-            <h2 class="container d-flex justify-content-center my-5" style="color: white;">Create New Account ;)</h2>
+            <h2 class="container d-flex justify-content-center my-5" style="color: white;">Create New Account ;) {{error}}</h2>
         </div>
     <div class="card container d-flex justify-content-center my-5" style="width: 18rem;">
         <div class="card-body">
