--- a/portfolio/templates/messages.html
+++ b/portfolio/templates/messages.html
@@ -72,7 +72,7 @@
           <td>{{ message.name }}</td>
           <td>{{ message.message }}</td>
           <td>
-            <a href="delete?del_id={{message.id}}"
+            <a href="delete?del_name={{message.name}}"
               ><button type="button" class="btn btn-dark">Delete</button></a
             >
           </td>
