--- a/portfolio/templates/project.html
+++ b/portfolio/templates/project.html
@@ -50,17 +50,7 @@
             <a class="nav-link" href="contact">Contact us</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
+        <a href="logout"><button class="btn btn-outline-danger my-2 my-sm-0" type="button">Logout</button></a>
       </div>
     </nav>
     <div class="container my-3 justify-content-center align-items-center">
