--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -31,11 +31,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact">Contact us</a>
               </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          </ul>            
+            <a href="logout"><button class="btn btn-outline-danger my-2 my-sm-0" type="button">Logout</button></a>
+
         </div>
     </nav>
     <div class="alert alert-warning alert-dismissible fade show mb-0" role="alert">
