--- a/portfolio/templates/project.html
+++ b/portfolio/templates/project.html
@@ -21,38 +21,30 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="message">Anuraj</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="home"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about">About Us</a>
-          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="project">My Projects</a>
+            <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact">Contact us</a>
+            <a class="nav-link" href="about">About Me</a>
           </li>
-        </ul>
-        <a href="logout"><button class="btn btn-outline-danger my-2 my-sm-0" type="button">Logout</button></a>
+          <li class="nav-item">
+              <a class="nav-link" href="project">My Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact">Contact us</a>
+            </li>
+        </ul>            
+          <a href="logout"><button class="btn btn-outline-danger" type="button">Logout</button></a>
+
       </div>
-    </nav>
+    </div>
+  </nav>
     <div class="container my-3 justify-content-center align-items-center">
       <h2 class="text-center mt-5 my-5 text-light">My Projects</h2>
       <div class="row">
