--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -13,10 +13,10 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="message">Anuraj</a>
+        <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -32,9 +32,10 @@
                 <a class="nav-link" href="contact">Contact us</a>
               </li>
           </ul>            
-            <a href="logout"><button class="btn btn-outline-danger my-2 my-sm-0" type="button">Logout</button></a>
+            <a href="logout"><button class="btn btn-outline-danger" type="button">Logout</button></a>
 
         </div>
+      </div>
     </nav>
     <div class="alert alert-warning alert-dismissible fade show mb-0" role="alert">
         <strong>Hello visitor!</strong> I hope you'll find something usefull here.
