--- a/portfolio/templates/messages.html
+++ b/portfolio/templates/messages.html
@@ -12,40 +12,32 @@
     />
   </head>
   <body class="bg-secondary">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="message">Anuraj</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="home"
-              >Home <span class="sr-only">(current)</span></a
-            >
+            <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="project">My Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact">Contact us</a>
-          </li>
-        </ul>
-        <a href="logout"><button class="btn btn-outline-danger my-2 my-sm-0" type="button">Logout</button></a>
+              <a class="nav-link" href="project">My Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact">Contact us</a>
+            </li>
+        </ul>            
+          <a href="logout"><button class="btn btn-outline-danger" type="button">Logout</button></a>
+
       </div>
-    </nav>
+    </div>
+  </nav>
     <div>
     <h2 style="color: azure;" class="position-relative my-5">Your messages and Testimonials:</h2>
     <div class="table-responsive">
