id_lia_and_view_upgrade

--- a/portfolio/templates/messages.html
+++ b/portfolio/templates/messages.html
@@ -54,7 +54,7 @@
           <td>{{ message.name }}</td>
           <td>{{ message.message }}</td>
           <td>
-            <a href="delete?del_name={{message.name}}"
+            <a href="delete?del_name={{message.name}}&del_id={{message.id}}"
               ><button type="button" class="btn btn-dark">Delete</button></a
             >
           </td>
