--- a/portfolio/home/static/project.css
+++ b/portfolio/home/static/project.css
@@ -1,55 +1,66 @@
-* {
-  box-sizing: border-box;
+body{
+    background-color: #070707;
 }
-body {
-  background-color: #070707;
-  /* background-color: black; */
-  /* background-color: black; */
+.highlight{
+    align-self: flex-start;
+    color: red;
 }
-.highlight {
-  align-self: flex-start;
-  color: red;
+hr{
+    background-color: red;
+    height: 2px;
+    float: inline-start;
+    width: 20%;
 }
-hr {
-  background-color: red;
-  height: 2px;
-  float: inline-start;
-  width: 40%;
+.head{
+    color:white;
+     background-color: black; 
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.1);
+    padding: 7px;
 }
-.sect {
-  color: white;
-  /* background-color: #070707; */
-  background-color: black;
-  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.1);
-  /* background-color:; */
+.container{
+    background-color: black; 
+    border-radius: 8px;
+    display: flex;
+    flex-wrap:wrap;
+    margin-top:0px;
+    padding:16px; 
+    font-size:15px;
+    margin-bottom:4px;
+    font-family: 'Times New Roman', Times, serif;
+    color:aliceblue;
 }
-.container {
-  /* background-color: #070707; */
-  background-color: black;
-  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 0px;
-  padding: 16px;
-  font-size: 15px;
-  margin-bottom: 4px;
-  font-family: "Times New Roman", Times, serif;
-  color: aliceblue;
+.card{
+    background-color:rgb(198 137 137 / 32%);
+    border-radius: 8px;
+    overflow: hidden;
+    color:white;
 }
-.card {
-  background-color: rgb(198 137 137 / 32%);
-  border-radius: 8px;
-  overflow: hidden;
-  color: white;
-}
-.card:hover {
-  background-color: #f44336;
+.card:hover{
+  background-color:  #F44336;
   color: white !important;
 }
-h2 {
-  font-style: italic;
-  font-size: x-large;
-  font-weight: bolder;
-  color: #bc1227fc;
+h2{
+    font-style: italic;
+    font-size: x-large; 
+    font-weight: bolder;
+    color: #bc1227fc;
+  }
+.btn{
+    border:none;
+    background-color: rgb(214, 59, 59);
+    outline: none;
+    color: white;
 }
+.btn:hover{
+    border-right:2px solid white;
+    border-bottom: 3px solid white;
+    background-color:black;
+    color: white;
+}
+h4{
+    color:wheat;
+  }
+.contact{
+    color:aliceblue;
+    padding: 15px;
+  } 
