--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -7,40 +7,91 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+     <style>
+      body{
+        background-color:#070707;
+        color: white;
+      }
+      .container{
+         background-color: black;
+    margin-bottom:4px;
+    padding:10px;
+    padding-left: 16px;
+    font-size:15px;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 8px;
+      }
+      b{
+        color: wheat;
+      }
+      .sect{
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  text-align: left;
+}
+.highlight{
+    align-self: flex-start;
+    color: red;
+}
+hr{
+    background-color: red;
+    height: 2px;
+    float: inline-start;
+    width: 40%;
+}
+.btn{
+  margin: 8px;
+  outline: none;
+  border: none;
+    background-color: rgb(214, 59, 59);
+    color: white;
+}
+.btn:hover{
+    background-color:black;
+    border-right:2px solid white;
+    color: white;
+    border-bottom: 3px solid white;
+}
+.textarea{
+  resize: none;
+}
+     </style>
     <title>Contact</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="message">Anuraj</a>
+      <a class="navbar-brand"style="color: red;"  href="message">Anuraj</a>
       <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item ">
             <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about">About Me</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
               <a class="nav-link" href="project">My Projects</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact">Contact us</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact">Contact Me</a>
             </li>
         </ul>            
-          <a href="logout"><button class="btn btn-outline-danger" type="button">Logout</button></a>
+          <a href="logout"><button class="btn " type="button">Logout</button></a>
 
       </div>
     </div>
   </nav>
       <div class="container align-center my-3">
-        <h2>
-            Contact me 
-        </h2>
+        <div class="sect">
+          <h5 class="highlight">CONTACT ME</h5>
+          <h1>LET'S <span class="highlight">WORK TOGETHER </span> ON YOUR NEXT PROJECT</h1>
+             <hr><br>
+             </div>
         <form action="add_contact" method="POST">
           {% csrf_token %}
               {{cfrm}}
@@ -50,14 +101,16 @@
         
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <hr>
+    <!-- <hr> -->
     <div class="card-body">
-      <h5 class="card-title text-center">Find me here!</h5>
+      <h5 class="card-title text-inline-start " style="color:red ;">Find me here!</h5>
+      <hr ><br>
+      <br>
       <p class="card-text">
         <ul type="circle">
             <li><b>Email:</b> anuraj.11.04@gmail.com</li>
-            <li><b>Contact me:</b>+91 8090780908</li>
-            <li><b>Instagram:</b>@anuraj._.m</li>
+            <li><b>Contact me:</b>  +91 8090780908</li>
+            <li><b>Instagram:</b>  @anuraj._.m</li>
         </ul>
       </p>
     </div>
