--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
   <head>
@@ -6,13 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="{%  static 'home.css' %}"> -->
+    <style>
 
+    body{
+    background-color: black;
+    color: aliceblue;
+    }
+    .highlight{
+        align-self: flex-start;
+        color: red;
+    }
+    hr{
+        background-color: red;
+        height: 2px;
+        float: inline-start;
+        width: 40%;
+    }
+    .container{
+        background-color: black;
+        border-radius: 8px;
+        font-family: 'Times New Roman', Times, serif;
+        font-size:15px;
+        margin-bottom:4px;
+        padding: 16px;
+    }
+    p{
+        margin-top: none;
+    }
+    .btn{
+        background-color: rgb(214, 59, 59);
+        color: white;
+    }
+    .btn:hover{
+        background-color:black;
+        border-right:2px solid white;
+        border-bottom: 3px solid white;
+        color: white;
+    }
+    .line{
+        background-color: #4A5C6A;
+        height: 2px;
+        float: inline-start;
+        width: 70%;
+    }
+  </style>
+  
     <title>Home Page</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="message">Anuraj</a>
+        <a class="navbar-brand"  style="color: red;"  href="message">Anuraj</a>
         <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,10 +76,10 @@
                 <a class="nav-link" href="project">My Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact">Contact us</a>
+                <a class="nav-link" href="contact">Contact Me</a>
               </li>
           </ul>            
-            <a href="logout"><button class="btn btn-outline-danger" type="button">Logout</button></a>
+            <a href="logout"><button class="btn " type="button">Logout</button></a>
 
         </div>
       </div>
@@ -71,54 +118,70 @@
             </a>
           </div>
     </div>
-    <div class="container my-3 justify-content-center align-items-center">
-        <h2 class="text-center mt-5 my-5">Me at a glance</h2>
-<div class="row">
-    <div class="col-md-4">
-    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
-        <img src="https://picsum.photos/500/300" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Simple Offline Dictionary</h5>
-          <p class="card-text">A simple offline dictionary made by using Python can be implemented as a command-line application that allows users to search for words and their definitions. This application can be built using a Python dictionary data structure and a simple text-based user interface. It can also pronounce the words and their definition.</p>
-          <a href="https://github.com/Anuraj-IND/Dictionary" class="btn btn-primary">Repo Link</a>
-        </div>
-    </div>
-</div>  
-<div class="col-md-4">
-<div class="card shadow-lg p-3 mb-5 bg-white rounded " style="width: 18rem;">
-        <img src="https://picsum.photos/501/301" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">AI Assistant</h5>
-          <p class="card-text">An AI (Artificial Intelligence) Assistant made by Python language refers to a software application or a system that uses machine learning algorithms and natural language processing techniques to understand, interpret, and respond to human input. These AI assistants can be designed to perform various tasks, such as answering questions, providing recommendations, or automating routine tasks.
-        </p>
-          <a href="https://github.com/Anuraj-IND/Ai_Assistent" class="btn btn-primary">Repo Link</a>
-        </div>
-      </div>
+    <div class="container">
+     <h5 class="highlight" >Hi There</h5>
+     <h1> I Am <span class="highlight">WEBAPP</span> DEVELOPER</h1>
+    <hr><br>
+    <br>
+    <p>I make complex simple.</p>
+    <p>
+      Hi, I am a passionate web app developer. I specialize in creating dynamic and responsive web applications that provide seamless user experiences. With a strong foundation in both front-end and back-end technologies, I enjoy turning complex problems into elegant solutions. I design and build web apps that are easy to use and work smoothly. My focus is on creating simple, effective solutions that help users get things done. With a mix of creativity and coding, I turn ideas into functional, user-friendly websites.Let’s build something amazing together!
+    </p>
+    <hr class="line"><br>
+    <br>
+    <p>Name:  Anuraj &nbsp; From: Allahabad</p>
+    <p>Age: 25 &nbsp; Qualification:  Btech</p>
+    <a href="{% static 'Resume.pdf' %}">
+      <button class="btn">Download CV</button></a>
+    <!-- <button class="btn">Download CV</button> -->
 </div>
-<div class="col-md-4">
-    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem;">
-            <img src="https://picsum.photos/500/301" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Library Management Sys.(MySQL)</h5>
-              <p class="card-text">A library management system (LMS) is a software application that helps libraries manage their resources, including books, periodicals, multimedia, and other materials. It also helps in managing the circulation of these resources, tracking their availability, and keeping records of their usage, made by using R-DBMS</p>
-              <a href="https://github.com/Anuraj-IND/Library-Management-System" class="btn btn-primary">Repo Link</a>
-            </div>
-          </div>
-    </div>
-</div>
-    </div>
-    <hr />
-    <div class="card text-bg-dark mb-3" style="max-width: 100%;">
-        <div class="card-body">
-          <h5 class="card-title text-center">Welcome to My Website!</h5>
-          <p class="card-text">
+        <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+<div class="footer">
+  <h3>GET IN TOUCH</h3>
+  <hr><br>
+  <br>
             <ul type="circle">
-                <li><b>Email:</b> anuraj.11.04@gmail.com</li>
-                <li><b>Contact me:</b>+91 8090780908</li>
-                <li><b>Instagram:</b>@anuraj._.m</li>
+                <li><b>Email:</b>  anuraj.11.04@gmail.com</li>
+                <li><b>Contact me:</b>  +91 8090780908</li>
+                <li><b>Instagram:</b>  @anuraj._.m</li>
             </ul>
-          </p>
-        </div>
+          <!-- </p> -->
+</div> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
