--- a/portfolio/templates/project.html
+++ b/portfolio/templates/project.html
@@ -15,62 +15,51 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{%  static 'project.css' %}" />
+    <link rel="stylesheet" href="{%  static 'project.css' %}">
     <title>Projects</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="message">Anuraj</a>
+      <a class="navbar-brand" style="color: red;" href="message">Anuraj</a>
       <div class="container">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="home"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about">About Me</a>
-            </li>
-            <li class="nav-item active">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about">About Me</a>
+          </li>
+          <li class="nav-item active">
               <a class="nav-link" href="project">My Projects</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact">Contact us</a>
+            <li class="nav-item ">
+              <a class="nav-link" href="contact">Contact Me</a>
             </li>
-          </ul>
-          <a href="logout"
-            ><button class="btn btn-outline-danger" type="button">
-              Logout
-            </button></a
-          >
-        </div>
+        </ul>            
+          <a href="logout"><button class="btn " type="button">Logout</button></a>
+
       </div>
-    </nav>
-    <div class="sect">
-      <h5 class="highlight">PROJECTS</h5>
-      <h1>WHAT WE <span class="highlight">DO</span> ?</h1>
-      <hr />
-      <br />
     </div>
-    <div class="container my-3 justify-content-center align-items-center">
-      <h2 class="text-center mt-5 my-5 text-light" style="font-weight: bold">
-        FEATURED PROJECTS
-      </h2>
+  </nav>
+
+  <div class="head">
+  <h5 class="highlight">PROJECTS</h5>
+  <h1 >WHAT I <span class="highlight">DO</span> ?</h1>
+     <hr><br>
+     </div>
+<div class="container my-3 justify-content-center align-items-center">
+  
+      <h2  class="highlight">FEATURED PROJECTS</h2>
       <div class="row">
         <div class="col-md-4">
-          <div class="card shadow-lg p-3 mb-5 rounded" style="width: 18rem">
+          <div
+            class="card shadow-lg p-3 mb-5 rounded"
+            style="width: 18rem"
+          >
             <img
               src="https://picsum.photos/500/300"
               class="card-img-top"
@@ -88,14 +77,16 @@
               </p>
               <a
                 href="https://github.com/Anuraj-IND/Dictionary"
-                class="btn btn-primary"
-                >Repo link</a
+                class="btn ">Repo link</a
               >
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-lg p-3 mb-5" style="width: 18rem">
+          <div
+            class="card shadow-lg p-3 mb-5 "
+            style="width: 18rem"
+          >
             <img
               src="https://picsum.photos/501/301"
               class="card-img-top"
@@ -114,14 +105,17 @@
               </p>
               <a
                 href="https://github.com/Anuraj-IND/Ai_Assistent"
-                class="btn btn-primary"
+                class="btn"
                 >Repo Link</a
               >
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-lg p-3 mb-5" style="width: 18rem">
+          <div
+            class="card shadow-lg p-3 mb-5 "
+            style="width: 18rem"
+          >
             <img
               src="https://picsum.photos/500/301"
               class="card-img-top"
@@ -139,14 +133,17 @@
               </p>
               <a
                 href="https://github.com/Anuraj-IND/Library-Management-System"
-                class="btn btn-primary"
+                class="btn "
                 >Repo Link</a
               >
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-lg p-3 mb-5" style="width: 18rem">
+          <div
+            class="card shadow-lg p-3 mb-5 "
+            style="width: 18rem"
+          >
             <img
               src="https://picsum.photos/502/301"
               class="card-img-top"
@@ -162,21 +159,24 @@
               </p>
               <a
                 href="https://github.com/Anuraj-IND/portfolio"
-                class="btn btn-primary"
+                class="btn "
                 >Repo Link</a
               >
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-lg p-3 mb-5" style="width: 18rem">
+          <div
+            class="card shadow-lg p-3 mb-5 "
+            style="width: 18rem"
+          >
             <img
               src="https://picsum.photos/500/302"
               class="card-img-top"
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">To-do List</h5>
+              <h2 class="card-title">To-do List</h2>
               <p class="card-text">
                 A To-Do list is a simple and effective way to organize and
                 manage tasks. It can be created using just HTML, CSS, and
@@ -184,28 +184,31 @@
               </p>
               <a
                 href="https://github.com/Anuraj-IND/ToDoList.github.io"
-                class="btn btn-primary"
+                class="btn "
                 >Repo Link</a
               >
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-lg p-3 mb-5" style="width: 18rem">
+          <div
+            class="card shadow-lg p-3 mb-5 "
+            style="width: 18rem"
+          >
             <img
               src="https://picsum.photos/501/302"
               class="card-img-top"
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Amazon Home page</h5>
+              <h2 class="card-title">Amazon Home page</h2>
               <p class="card-text">
                 As a beginner just making a Amazon global e-web home page for
                 learning experience.
               </p>
               <a
                 href="https://github.com/Anuraj-IND/Amazon.github.io"
-                class="btn btn-primary"
+                class="btn "
                 >Repo Link</a
               >
             </div>
@@ -213,6 +216,27 @@
         </div>
       </div>
     </div>
+    <div class="contact">
+      <h3 style="color:red;">Get In Touch</h3>
+      <hr>
+      <br>
+      <br>
+          <ul>
+            <h4>Instagram/Behnance:</h4>
+            <p>@anuraj._.m</p>
+            <h4>Studio:</h4>
+            <p>125 Anywhere St.Any City</p>
+            <h4>Email:</h4>
+            <p>anuraj.11.04@gmail.com</p>
+            <h4>Phone:</h4>
+            <p>+918090780908</p>
+          </ul>
+          </div>
+          <!-- Optional JavaScript -->
+          <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+          <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
